--- a/public/display.html
+++ b/public/display.html
@@ -3,23 +3,21 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Laserpointer Display v3.16 (Canvas2D)</title>
+  <title>Laserpointer Display v3.17 (Canvas2D dyn. Breite)</title>
   <style>
     body { margin:0; background:#000; overflow:hidden }
     #version {
       position:absolute; top:10px; left:10px;
       color:#fff; font-family:sans-serif;
-      font-size:14px; opacity:0.6;
-      z-index:10;
+      font-size:14px; opacity:0.6; z-index:10;
     }
     canvas { display:block; margin:auto; background:#000 }
   </style>
 </head>
 <body>
-  <div id="version">v3.16 (Canvas2D dyn. Breite)</div>
+  <div id="version">v3.17 (Canvas2D dyn. Breite)</div>
   <canvas id="canvas" width="1024" height="1024"></canvas>
 
-  <!-- Socket.IO Client -->
   <script src="/socket.io/socket.io.js"></script>
   <script>
   (() => {
@@ -27,6 +25,10 @@
     const c      = document.getElementById("canvas");
     const ctx    = c.getContext("2d");
     const CX     = c.width/2, CY = c.height/2;
+
+    // runde Kappen und Ecken
+    ctx.lineCap  = "round";
+    ctx.lineJoin = "round";
 
     // Default-Einstellungen
     let MAX_H = 20, MAX_V = 20, MIN_W = 5, MAX_W = 12, SMOOTH = 0.15;
@@ -53,12 +55,12 @@
       for (let id in state) state[id].segments = [];
     });
 
-    // Neue Daten
+    // Bewegungsdaten
     socket.on("motion", ({ alpha, beta, color, isDrawing, deviceId }) => {
       if (typeof alpha!=="number" || !deviceId) return;
       const now = performance.now();
 
-      // initialisieren
+      // init
       if (!state[deviceId]) {
         state[deviceId] = {
           alpha0: null, beta0: null,
@@ -73,46 +75,48 @@
       s.lastColor = color;
       s.lastLight = parseLight(color);
 
-      // bei erstem Zeichnen kalibrieren
-      if (isDrawing && s.alpha0 === null) {
+      // kalibrieren
+      if (isDrawing && s.alpha0===null) {
         s.alpha0 = alpha;
         s.beta0  = beta;
       }
-      if (s.alpha0 === null) return;
+      if (s.alpha0===null) return;
 
-      // Winkel-Delta + Wrap-Around
-      let dA = alpha - s.alpha0;
+      // delta + wrap
+      let dA = alpha - s.alpha0;  
       if (dA>180)  dA-=360;
       if (dA<-180) dA+=360;
       let dB = beta - s.beta0;
       dA = Math.max(-MAX_H, Math.min(MAX_H, dA));
       dB = Math.max(-MAX_V, Math.min(MAX_V, dB));
 
-      // auf Canvas-Koordinaten mappen
-      const x = CX - (dA/MAX_H)*CX;
-      const y = CY - (dB/MAX_V)*CY;
+      // map to canvas
+      const x = CX - (dA/MAX_H)*CX,
+            y = CY - (dB/MAX_V)*CY;
 
-      // Glätten (für den Puls-Cursor)
+      // glätten (für Puls)
       const sp = s.smooth;
-      sp.x += (x - sp.x)*SMOOTH;
-      sp.y += (y - sp.y)*SMOOTH;
+      sp.x += (x-sp.x)*SMOOTH;
+      sp.y += (y-sp.y)*SMOOTH;
 
-      // Geschwindigkeit berechnen (px/s)
-      const dt    = (now - sp.t)/1000;
-      const dx    = x - (s.prevX||x);
-      const dy    = y - (s.prevY||y);
-      const speed = dt>0 ? Math.hypot(dx,dy)/dt : 0;
-      sp.t = now; s.prevX = x; s.prevY = y;
+      // Geschwindigkeit für Breite
+      const dt    = (now-sp.t)/1000,
+            dx    = x - (s.prevX||x),
+            dy    = y - (s.prevY||y),
+            speed = dt>0 ? Math.hypot(dx,dy)/dt : 0;
+      sp.t     = now;
+      s.prevX  = x;
+      s.prevY  = y;
 
-      // wenn gezeichnet wird, Segment speichern
+      // zeichnen?
       if (isDrawing) {
         const norm = Math.min(1, speed/2000);
         const w2   = MAX_W - (MAX_W - MIN_W)*norm;
         const w1   = s.lastW;
         s.lastW    = w2;
         s.segments.push({
-          x1: sp.x - dx, y1: sp.y - dy,
-          x2: sp.x,      y2: sp.y,
+          x1: sp.x - dx,  y1: sp.y - dy,
+          x2: sp.x,       y2: sp.y,
           w1, w2, color
         });
       }
@@ -123,12 +127,15 @@
     (function draw(){
       ctx.clearRect(0,0,c.width,c.height);
 
-      // 1) alle Segmente zeichnen (Unterteilungen für smooth width)
+      // ============
+      // 1) Linien
+      // ============
       for (let id in state) {
         const s = state[id];
         ctx.strokeStyle = s.lastColor;
+
         for (let seg of s.segments) {
-          const steps = 10;
+          const steps = 30;  // statt 10 jetzt 30 Unterteilungen
           for (let i=0; i<steps; i++) {
             const t0 = i/steps, t1=(i+1)/steps;
             const x0 = seg.x1 + (seg.x2-seg.x1)*t0;
@@ -145,20 +152,22 @@
         }
       }
 
-      // 2) pulsierender Punkt
+      // ============
+      // 2) Pulsierender Punkt
+      // ============
       pulse += grow?0.2:-0.2;
-      if (pulse>2) grow = false;
-      if (pulse<0) grow = true;
+      if (pulse>2) grow=false;
+      if (pulse<0) grow=true;
 
       for (let id in state) {
-        const sp    = state[id].smooth,
-              r     = state[id].lastW/2 + pulse;
+        const sp = state[id].smooth,
+              r  = state[id].lastW/2 + pulse;
         // Füllung
         ctx.beginPath();
         ctx.fillStyle = state[id].lastColor;
         ctx.arc(sp.x, sp.y, r, 0, Math.PI*2);
         ctx.fill();
-        // weißer Ring bei dunkler Farbe
+        // weißer Ring bei dunkler Helligkeit
         if (state[id].lastLight < 20) {
           ctx.lineWidth   = 3;
           ctx.strokeStyle = "#fff";
@@ -170,6 +179,7 @@
 
       requestAnimationFrame(draw);
     })();
+
   })();
   </script>
 </body>
