--- a/public/admin.html
+++ b/public/admin.html
@@ -2,73 +2,97 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Admin Panel v3.9</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Admin Panel v3.8</title>
   <style>
-    body { margin:0; padding:20px; background:#111; color:#fff; font-family:sans-serif }
-    .setting { margin:15px 0 }
-    label { display:inline-block; width:220px }
-    input { width:100px }
-    #clear { padding:8px 16px; background:#c33; border:none; color:#fff; cursor:pointer }
+    body { margin:0; padding:20px; background:#111; color:#fff; font-family:sans-serif; }
+    h1 { margin-top:0; }
+    #status { margin:10px 0; font-weight:bold; }
+    .setting { margin:15px 0; }
+    label { display:inline-block; width:200px; vertical-align:middle; }
+    input[type="number"], input[type="range"] { vertical-align:middle; }
+    #smoothVal { display:inline-block; width:40px; text-align:right; margin-left:8px; }
+    #clear { margin-top:10px; padding:8px 16px; background:#c33; color:#fff; border:none; cursor:pointer; }
+    table { width:100%; margin-top:20px; border-collapse:collapse; }
+    th, td { padding:8px; border:1px solid #444; text-align:left; }
+    th { background:#222; }
   </style>
 </head>
 <body>
-  <h1>Admin Panel v3.9</h1>
+  <h1>Admin Panel v3.8</h1>
+  <div id="status">
+    Display: <span id="dispState">–</span>
+  </div>
 
   <div class="setting">
-    <label for="maxH">Max. Winkel horizontal (°)</label>
-    <input id="maxH" type="number" value="20" min="1" max="180"/>
+    <label for="maxH">Max. Winkel horizontal (°):</label>
+    <input id="maxH" type="number" value="20" min="0" max="180"/>
   </div>
   <div class="setting">
-    <label for="maxV">Max. Winkel vertikal (°)</label>
-    <input id="maxV" type="number" value="20" min="1" max="180"/>
+    <label for="maxV">Max. Winkel vertikal (°):</label>
+    <input id="maxV" type="number" value="20" min="0" max="180"/>
   </div>
   <div class="setting">
-    <label for="minW">Min. Strichstärke (px)</label>
-    <input id="minW" type="number" value="2" min="1" max="50"/>
-  </div>
-  <div class="setting">
-    <label for="maxW">Max. Strichstärke (px)</label>
-    <input id="maxW" type="number" value="12" min="1" max="100"/>
-  </div>
-  <div class="setting">
-    <label for="smooth">Glättung (0–1, 0 = Maximalglättung)</label>
-    <input id="smooth" type="number" step="0.01" min="0" max="1" value="0.15"/>
+    <label for="smooth">Glättung (% – 0 = volle Glättung):</label>
+    <input id="smooth" type="range" min="0" max="100" value="20"/>
+    <span id="smoothVal">20 %</span>
   </div>
 
   <button id="clear">Canvas löschen</button>
 
+  <h2>Verbundene Handys</h2>
+  <table>
+    <thead><tr><th>Geräte-ID</th><th>IP-Adresse</th></tr></thead>
+    <tbody id="clientList"></tbody>
+  </table>
+
   <script src="/socket.io/socket.io.js"></script>
   <script>
-    const sock  = io();
-    const elMaxH = document.getElementById("maxH");
-    const elMaxV = document.getElementById("maxV");
-    const elMinW = document.getElementById("minW");
-    const elMaxW = document.getElementById("maxW");
-    const elSmooth = document.getElementById("smooth");
-    const btnClear = document.getElementById("clear");
+    const socket = io();
+    socket.emit("identify", { role: "admin", deviceId: null });
 
-    sock.emit("identify",{ role:"admin", deviceId:null });
+    const elMaxH     = document.getElementById("maxH");
+    const elMaxV     = document.getElementById("maxV");
+    const elSmooth   = document.getElementById("smooth");
+    const elSmoothVal= document.getElementById("smoothVal");
+    const btnClear   = document.getElementById("clear");
+    const tblBody    = document.getElementById("clientList");
+    const dispState  = document.getElementById("dispState");
 
-    function send() {
-      const cfg = {
-        maxH:   parseFloat(elMaxH.value),
-        maxV:   parseFloat(elMaxV.value),
-        minW:   parseFloat(elMinW.value),
-        maxW:   parseFloat(elMaxW.value),
-        smooth: parseFloat(elSmooth.value)
-      };
-      sock.emit("updateSettings", cfg);
+    function sendSettings() {
+      const maxH   = parseFloat(elMaxH.value) || 20;
+      const maxV   = parseFloat(elMaxV.value) || 20;
+      // invertierter Slider: 20 % → smooth = 0.80
+      const smooth = 1 - (parseFloat(elSmooth.value) / 100);
+      socket.emit("updateSettings", { maxH, maxV, smooth });
     }
 
-    [elMaxH, elMaxV, elMinW, elMaxW, elSmooth].forEach(el =>
-      el.addEventListener("change", send)
-    );
+    elMaxH.addEventListener("change", sendSettings);
+    elMaxV.addEventListener("change", sendSettings);
+    elSmooth.addEventListener("input", () => {
+      elSmoothVal.textContent = elSmooth.value + " %";
+      sendSettings();
+    });
 
-    btnClear.addEventListener("click", () => sock.emit("clear"));
+    btnClear.addEventListener("click", () => {
+      socket.emit("clear");
+    });
 
-    // initial
-    send();
+    // Initial die Settings senden
+    sendSettings();
+
+    socket.on("client-list", list => {
+      const hasDisp = list.some(c => c.type === "display");
+      dispState.textContent = hasDisp ? "verbunden ✅" : "nicht verbunden ❌";
+
+      const ctrls = list.filter(c => c.type === "control" && c.active);
+      tblBody.innerHTML = "";
+      ctrls.forEach(({ deviceId, ip }) => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `<td>${deviceId || "–"}</td><td>${ip}</td>`;
+        tblBody.appendChild(tr);
+      });
+    });
   </script>
 </body>
 </html>
